# session-dex

./: .gitignore  AGENTS.md  FEATURES.md  README.md  index.html  install.cmd  install.ps1  install.sh  package-lock.json  package.json  uninstall.cmd  uninstall.ps1  uninstall.sh  vite.config.ts
scripts/: build.mjs  doctor.ps1  doctor.sh  generate-icon.py  uninstall-macos.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  instance.rs  lib.rs  main.rs  models.rs  terminal.rs
src-tauri/src/providers/: claude.rs  codex.rs  mod.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
src/lib/: api.ts  types.ts  utils.ts
