[package]
name = "sessiondex"
version = "0.1.0"
description = "A lightweight desktop session manager for terminal AI assistants."
authors = ["SessionDex"]
edition = "2021"

[lib]
name = "sessiondex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
fs2 = "0.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
